--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Page</title>
+    <title>Julian du Vollkek</title>
     <style>
         body {
             background-color: black;
@@ -26,6 +26,6 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/ETRfMgqgZJM" 
         frameborder="0" allowfullscreen></iframe>
     </div>
-    <div class="text">DU KEK</div>
+    <div class="text">DU VOLLKEK</div>
 </body>
 </html>
